feat: download route
